<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_Q1">

    <TextView
        android:id="@+id/q1"
        android:layout_width="325dp"
        android:layout_height="98dp"
        android:text="@string/q1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        tools:ignore="TextSizeCheck" />

    <RadioGroup
        android:id="@+id/rg_q1"
        android:layout_width="277dp"
        android:layout_height="211dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372">

        <RadioButton
            android:id="@+id/rb1_a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1_a1" />

        <RadioButton
            android:id="@+id/rb1_a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1_a2" />

        <RadioButton
            android:id="@+id/rb1_a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1_a3" />

        <RadioButton
            android:id="@+id/rb1_a4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/rb1_a4" />
    </RadioGroup>

    <Button
        android:id="@+id/btn1"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:text="@string/btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />
</androidx.constraintlayout.widget.ConstraintLayout>