<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_Q2">

    <Button
        android:id="@+id/btn2"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:text="@string/btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <TextView
        android:id="@+id/q2"
        android:layout_width="278dp"
        android:layout_height="81dp"
        android:text="@string/q2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="TextSizeCheck" />

    <RadioGroup
        android:id="@+id/rg_q2"
        android:layout_width="276dp"
        android:layout_height="365dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/rb2_a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2_a1" />

        <RadioButton
            android:id="@+id/rb2_a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2_a2" />

        <RadioButton
            android:id="@+id/rb2_a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2_a3" />

        <RadioButton
            android:id="@+id/rb2_a4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2_a4" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>