<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_q3">

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:text="@string/btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <TextView
        android:id="@+id/q5"
        android:layout_width="308dp"
        android:layout_height="92dp"
        android:text="@string/q4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        tools:ignore="TextSizeCheck" />

    <RadioGroup
        android:id="@+id/rg_q4"
        android:layout_width="306dp"
        android:layout_height="258dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389">

        <RadioButton
            android:id="@+id/rb4_a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb4_a1" />

        <RadioButton
            android:id="@+id/rb4_a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb4_a2" />

        <RadioButton
            android:id="@+id/rb4_a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb4_a3" />

        <RadioButton
            android:id="@+id/rb4_a4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb4_a4" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>